Fixed the color of the scrollbar in the dark mode

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ html {
 }
 ::-webkit-scrollbar {
   width: 8px;
-  background: white;
+  background: var(--white);
 }
 
 ::-webkit-scrollbar-track {
